# ai-code-review-system

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
api/: server.py
config/: settings.py
env/: action.py  environment.py  observation.py  reward.py  state.py  utils.py
graders/: easy_grader.py  hard_grader.py  medium_grader.py  scoring.py
scripts/: run_env.py  validate_env.py
tasks/: easy_task.py  hard_task.py  medium_task.py  task_manager.py
tests/: test_env.py  test_graders.py  test_tasks.py
